chore: worked on blogcard

--- a/data/posts/beyond-console-log.mdx
+++ b/data/posts/beyond-console-log.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Beyond console.log()'
 publishedAt: '2020-06-27'
+image: 'JS.png'
 summary: "Do you know console.log() have cousions and they have awesome superpowers?"
 ---
 
