refactor: add common card element. add few types. add custom document type for portals

--- a/data/projects/connect-3.mdx
+++ b/data/projects/connect-3.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Add Eat Repeat"
+title: "Connect 3"
 publishedAt: "2018-04-14"
 platform: "Android"
 url: "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
