--- a/data/projects/create-react-saga.mdx
+++ b/data/projects/create-react-saga.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Create React Saga"
 platform: "npm"
+publishedAt: "2020-11-16"
 summary: "create-react-saga is a CLI tool for quickly setup your next clutter-free webpack backed React application."
 ---
 
