feat: completed feature showcase cards available on homepage

--- a/data/projects/connect-3.mdx
+++ b/data/projects/connect-3.mdx
@@ -1,10 +1,8 @@
 ---
 title: "Connect 3"
-publishedAt: "2018-04-14"
-platform: "Android"
-url: "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
+platform: "playstore.svg"
+url: "https://play.google.com/store/apps/details?id=com.droidvista.sunny.tictactoe"
+image: "connect3.png"
 summary: "Connect 3 is a 3x3 classic Tic Tac Toe board game."
-details: "Connect 3 is a 3x3 classic Tic Tac Toe board game. The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game. It was first time ever I created any kind of app and published it on Google store."
-demo: <iframe width="560" height="315" src="https://www.youtube.com/embed/Vd955qsbJ9w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 technology: ["Java", "Android Studio"]
 ---
