--- a/data/projects/create-react-saga.mdx
+++ b/data/projects/create-react-saga.mdx
@@ -1,10 +1,8 @@
 ---
 title: "Create React Saga"
-platform: "npm"
-publishedAt: "2020-11-16"
+platform: "npm.svg"
 url: "https://sprakash57.github.io/create-react-saga"
+image: "wrs.png"
 summary: "create-react-saga is a CLI tool for quickly setup your next clutter-free webpack backed React application."
-details: "create-react-saga is a CLI tool for quickly setup your next clutter-free webpack backed React application. It provides you the latest hooks based codebase, testing utilities and storybooks. Creating components ahead of development for early reviews, Want to use Redux-Saga middleware for async calls, Proper testing environment setup for React hooks. All packed in one package. You will get the most vanilla React experience ever."
-demo: "https://live.d3knmnietsgia5.amplifyapp.com/"
-technology: ["React 17", "Redux-Saga", "ES6+", "Webpack 5", "Storybook.js", "React Testing Library"]
+technology: ["React", "Typescript", "Node.js", "Storybook.js"]
 ---
