--- a/data/projects/add-eat-repeat.mdx
+++ b/data/projects/add-eat-repeat.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Add Eat Repeat"
-publishedAt: "2020-04-14"
-platform: "Android"
+platform: "playstore.svg"
 url: "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
 summary: "Do not argue with your mate over what to cook today or tomorrow. Let this app create a menu for you."
-details: "Are you a bachelor sharing flat with others? or maybe married couple who has moved in to a new place. Well you may have faced the question - what to eat today? or what we are going to tell maid/cook to prepare tomorrow. Worry not!! This app is lifesaver for you folks. Simply add meal course to the app and it will generate plans for you. How is this different from other apps. Well first its not a scheduler or a calendar which will provide you meals for whole month. This app keeps it short, it shows meals for ongoing week. you don't want add your meals and change it every other day."
+image: "addeatrepeat.png"
 technology: ["React Native", "Expo", "React Navigation", "SQLite"]
 ---
