fix: Overall fixes for blogs

--- a/data/posts/5-less-common-array-methods.mdx
+++ b/data/posts/5-less-common-array-methods.mdx
@@ -1,6 +1,7 @@
 ---
+id: 1
 title: "5 less common Array methods in Javascript"
-publishedAt: "2020-12-08"
+publishedAt: "25 May 2020"
 summary: "There are some Array methods which are not as poplular as their siblings. Rare but powerful. Want to explore?"
 ---
 
