--- a/data/posts/beyond-console-log.mdx
+++ b/data/posts/beyond-console-log.mdx
@@ -1,6 +1,7 @@
 ---
+id: 5
 title: 'Beyond console.log()'
-publishedAt: '2020-06-27'
+publishedAt: '2 Nov 2020'
 summary: "Do you know console.log() have cousions and they have awesome superpowers?"
 ---
 
