--- a/data/posts/integrate-express-validator-to-your-express-app.mdx
+++ b/data/posts/integrate-express-validator-to-your-express-app.mdx
@@ -1,10 +1,9 @@
 ---
+id: 3
 title: "Integrage express-validator to your Express App"
-publishedAt: "2021-02-02"
+publishedAt: "29 September 2020"
 summary: "Want to validate user input efficiently in the backend? If yes, this guide we will help you up and running."
 ---
-
-#### The original post can be found over [here](https://suprdev.netlify.com/blog/express-validator).
 
 ## Why do I need express-validator?
 Short and simple if your UI is using forms or multiple input fields and in the backend express application you want to validate those data against database schema, then you need to validate them first before you actually process it. Sure, you can do all the validation manually by writing all sorts of logics and regexes. But why reinvent the wheel if something is doing that for you already. This is where the express-validator library comes in.
