--- a/data/posts/talk-about-es2020.mdx
+++ b/data/posts/talk-about-es2020.mdx
@@ -1,6 +1,7 @@
 ---
+id: 4
 title: "Let's talk about ES2020"
-publishedAt: '2020-04-27'
+publishedAt: '25 Oct 2020'
 summary: "New release of Ecmascript with lots of newbies to explore and learn."
 ---
 
