--- a/data/projects/add-eat-repeat.mdx
+++ b/data/projects/add-eat-repeat.mdx
@@ -1,8 +1,10 @@
 ---
+id: 2
 title: "Add Eat Repeat"
 platform: "playstore.svg"
 url: "https://play.google.com/store/apps/details?id=com.insu.sunny.addeatrepeat"
 summary: "Do not argue with your mate over what to cook today or tomorrow. Let this app create a menu for you."
 image: "addeatrepeat.png"
 technology: ["React Native", "Expo", "React Navigation", "SQLite"]
+pinned: true
 ---
