--- a/data/posts/bookplorer.mdx
+++ b/data/posts/bookplorer.mdx
@@ -5,8 +5,8 @@ publishedAt: '3 Jan 2021'
 summary: "Find and explore books around the globe. Time to become Bibliophile 🤓"
 ---
 
-## What I built
-I have built **Bookplorer** app, a dedicated book finder. I have used Svelte ecosystem and neumorphic style. It is deployed using DigitialOcean's App platform.
+### What is it?
+In the month of January 2021, DigitalOcean parterned with Dev.to and commenced `Dockathon`. It was just like another hackathon event except one thing. You will have to built something on DigitalOcean newly launched App platform. I saw this as a great opportunity to learn about the platform meanthile I participate. So I have decided to create a web app. For a long time, I wanted to try out the `Google's Books API` and that is why I decided to build **Bookplorer**, a dedicated book finder. Afterwards it was more about choosing tools to built it and I decided to go with something entirely new 😁. More info in `How I built it` section.
 
 ### Category Submission: 
 I would say this falls into the "Program for the people" category. The reason is pretty much clear, It will help users to find books.
