feat: Add click to copy feature. doc: Verbiage fix for several posts and about section. style: Change the font size of intro section at home page.

--- a/data/posts/5-less-common-array-methods.mdx
+++ b/data/posts/5-less-common-array-methods.mdx
@@ -1,8 +1,8 @@
 ---
-id: 1
+id: 2
 title: "5 less common Array methods in Javascript"
 publishedAt: "25 May 2020"
-summary: "There are some Array methods which are not as poplular as their siblings. Rare but powerful. Want to explore?"
+summary: "There are some Array methods which are not as popular as their siblings. Rare but powerful. Want to explore?"
 ---
 
 The title "Less common" holds since I haven't seen them getting used very frequently. Because there are popular data structure libraries (lodash, underscore, etc) present out there to do the heavy lifting. I won't be talking about those methods. Let's cover what vanilla JavaScript has to offer -
