--- a/data/posts/beyond-console-log.mdx
+++ b/data/posts/beyond-console-log.mdx
@@ -2,7 +2,7 @@
 id: 5
 title: 'Beyond console.log()'
 publishedAt: '2 Nov 2020'
-summary: "Do you know console.log() have cousions and they have awesome superpowers?"
+summary: "Do you know console.log() has cousions and they have awesome superpowers?"
 ---
 
 When it comes to debugging JavaScript application, there could be multiple ways such as using browser's devtool or use of the debugger keyword in your code. But the most popular technique is to put console.log() inside your code. I know most of us will complain against the practice of using logs directly in your code. But honestly, everyone does that. You can not deny the fact 😁. What if I tell there are more ways of using **Conosle API** and its method that you probably wouldn't think of. It will definitely enhance your logging experience. So without further ado, let's do further
