--- a/data/posts/how-to-set-environment-variables-in-gatsby.mdx
+++ b/data/posts/how-to-set-environment-variables-in-gatsby.mdx
@@ -1,8 +1,8 @@
 ---
-id: 2
+id: 1
 title: "How to set Environment variable in Gatsby"
 publishedAt: "17 May 2020"
-summary: "Setting environement variable properly could be painful when it comes to SSG. Lets make it easy."
+summary: "Setting environment variable properly could be painful when it comes to SSG. Lets make it easy."
 ---
 So you have planned to develop your own blog/portfolio site with Gatsby. You have some content that is getting rendered due to some secret API key and you don't want to expose these keys on gitHub. Well, one way to achieve this is, to use hardcoded strings and while pushing your code, you should replace it with some placeholder string. But it does not sound like a preferable way and trust me it is tedious too. Things get more interesting when it comes to Gatsby since there are two kinds of environment variables. One which can be accessed by your client (your browser) and the Second is server-side node.js which is accessible inside gatsby-config.js and/or gatsby-node.js.
 
