--- a/data/posts/integrate-express-validator-to-your-express-app.mdx
+++ b/data/posts/integrate-express-validator-to-your-express-app.mdx
@@ -1,8 +1,8 @@
 ---
 id: 3
-title: "Integrage express-validator to your Express App"
+title: "Integrate express-validator to your Express App"
 publishedAt: "29 September 2020"
-summary: "Want to validate user input efficiently in the backend? If yes, this guide we will help you up and running."
+summary: "Want to validate user input efficiently in the backend? If yes, this guide will help you get started."
 ---
 
 ## Why do I need express-validator?
