--- a/data/projects/create-react-saga.mdx
+++ b/data/projects/create-react-saga.mdx
@@ -4,7 +4,7 @@ title: "Create React Saga"
 platform: "npm.svg"
 url: "https://sprakash57.github.io/create-react-saga"
 image: "wrs.png"
-summary: "create-react-saga is a CLI tool for quickly setup your next clutter-free webpack backed React application."
+summary: "create-react-saga is a CLI tool to quickly setup your next clutter-free webpack backed React application."
 technology: ["React", "Typescript", "Node.js", "Storybook.js"]
 pinned: true
 ---
