feat: new social share pannel

--- a/data/posts/bookplorer.mdx
+++ b/data/posts/bookplorer.mdx
@@ -1,6 +1,6 @@
 ---
 id: 6
-title: 'My Dockathon entry - Bookplorer'
+title: 'My Dockathon entry - Bookplorer akdfkjalfj alkejflka jelkfjalkejfklaejifrfjaljf iajeflr'
 publishedAt: '3 Jan 2021'
 timestamp: 1609657969
 summary: 'Find and explore books around the globe. Time to become Bibliophile 🤓'
